--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-body {
-	background: black;
-	color: white;
-}
-
 table {
 	border: 5px solid #D37220;
 	padding: 5px;
@@ -20,15 +15,50 @@ th, td {
 	text-align: center;
 }
 
+th {
+	color: black;
+}
+
+button {
+	width: 100px;
+	height: 100px;
+	background-color: #553C67;
+	color: white;
+	border-color: #553c67;
+}
+
+button:hover {
+	background-color: #d37220;
+}
+
+body {
+	background-color: #000000;
+	color: white;
+}
+
 #title {
 	background: #D37220;
 	text-align: center;
 }
 
-td:hover {
-	background-color: #d37220;
+#player1 {
+	text-align: center;
+	border: 5px solid white;
+	background-color: #D37220;
+	color: #533C67;
+	font-size: 50px;
+	height: 100px;
+	width: 200px;
 }
 
-th {
-	color: black;
+#player1Score {
+
+}
+
+#player2 {
+
+}
+
+#player2Score {
+
 }
