--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,12 @@ th, td {
 	height: 100px;
 	width: 100px;
 	text-align: center;
+	font-size: 20px;
 }
 
 th {
-	color: black;
+	color: #D37220;
+	font-size: 25px;
 }
 
 button {
@@ -25,6 +27,8 @@ button {
 	background-color: #553C67;
 	color: white;
 	border-color: #553c67;
+	font-size: 20px;
+	font-family: 'Bangers', cursive;
 }
 
 button:hover {
@@ -32,33 +36,42 @@ button:hover {
 }
 
 body {
+	font-family: 'Bangers', cursive;
 	background-color: #000000;
 	color: white;
+	background-image: url("../images/game.jpg");
+	background-position: center;
+	background-size: cover;
 }
 
-#title {
-	background: #D37220;
+h1 {
+	font-family: 'Bangers', cursive;
+	color: #000000;
 	text-align: center;
+	font-size: 300px;
+	font-weight: 900;
 }
 
-#player1 {
+.scores {
 	text-align: center;
-	border: 5px solid white;
-	background-color: #D37220;
-	color: #533C67;
+	border: 5px solid #D37220;
+	background-color: #533C67;
+	color: white;
 	font-size: 50px;
 	height: 100px;
 	width: 200px;
+	border-radius: 20px;
+	font-family: 'Bangers', cursive;
 }
 
-#player1Score {
-
-}
-
-#player2 {
-
-}
-
-#player2Score {
-
+.players {
+	text-align: center;
+	border: 5px solid #533C67;
+	background-color: #D37220;
+	color: #000000;
+	font-size: 50px;
+	height: 100px;
+	width: 200px;
+	border-radius: 20px;
+	font-family: 'Bangers', cursive;
 }
