--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,54 @@
+
+
 table {
-	border: 5px solid #D37220;
+	border: 5px solid #0069D9;
 	padding: 5px;
 	text-align: center;
 	background: #553C67;
 	color: white;
 }
 
-th, td {
-	border: 2px solid #d37220;
-	background: #553C67;
-	color: white;
-	height: 100px;
+th {
 	width: 100px;
-	text-align: center;
+	height: 100px;
+	background-color: white;
+	color: #F4C500;
+	border-color: black;
 	font-size: 20px;
+	font-family: 'Bangers', cursive;
+	border: 2px solid #0069D9;
+	border-width: thick;
+	padding-top: 40px;
 }
 
-th {
-	color: #D37220;
-	font-size: 25px;
+
+
+td {
+	width: 100px;
+	height: 100px;
+	background-color: white;
+	color: #F4C500;
+	border-color: black;
+	font-size: 20px;
+	font-family: 'Bangers', cursive;
+	border: 2px solid #0069D9;
+	border-width: thick;
 }
+
 
 button {
 	width: 100px;
 	height: 100px;
-	background-color: #553C67;
-	color: white;
-	border-color: #553c67;
-	font-size: 30px;
+	background-color: white;
+	color: #F4C500;
+	border-color: black;
+	font-size: 20px;
 	font-family: 'Bangers', cursive;
+	border: 2px solid #0069D9;
 }
 
 button:hover {
-	background-color: #d37220;
+	background-color: #0069D9;
 }
 
 body {
@@ -46,34 +62,20 @@ body {
 
 h1 {
 	font-family: 'Bangers', cursive;
-	color: #000000;
+	color: #F4C500;
 	text-align: center;
 	font-size: 100px;
 	font-weight: 600;
+	text-indent: 180px;
 }
 
 .scores {
-	padding-top: 20px;
 	text-align: center;
-	border: 5px solid #D37220;
-	background-color: #533C67;
-	color: white;
-	font-size: 50px;
-	height: 100px;
-	width: 200px;
+	border: 5px solid #F4C500;
+	color: #F4C500;
+	font-size: 25px;
 	border-radius: 20px;
 	font-family: 'Bangers', cursive;
 }
 
-.players {
-	padding-top: 20px;
-	text-align: center;
-	border: 5px solid #533C67;
-	background-color: #D37220;
-	color: #000000;
-	font-size: 50px;
-	height: 100px;
-	width: 200px;
-	border-radius: 20px;
-	font-family: 'Bangers', cursive;
-}
+
