--- a/assets/css/questionAndChoices.css
+++ b/assets/css/questionAndChoices.css
@@ -9,3 +9,25 @@
 }
 
 /* Choices */
+
+div#choices-div {
+  text-align: center;
+  font-size: 2em;
+  /* line-height: 61px; */
+  /* background-color: yellow; */
+  margin: 0 130px;
+}
+
+div#choices-div li {
+  background-color: yellow;
+  margin-bottom: 10px;
+  padding: 13px;
+  border-radius: 100px;
+  color: blue;
+  letter-spacing: 4px;
+}
+
+div#choices-div li:hover {
+  background-color: blue;
+  color: yellow;
+}
