--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ th {
   width: 150px;
   height: 150px;
   background-color: #F4C500;
-  color: black;
+  color: white;
   border-color: black;
   font-size: 25px;
   font-family: 'Bangers', cursive;
@@ -73,15 +73,52 @@ h1 {
   font-family: 'Bangers', cursive;
 }
 
-#chatbox {
+#chat-box {
   padding: 20px;
   font-family: 'Delius', cursive;
   font-size: 20px;
   margin-left: 225px;
-  height: 625px;
-  width: 300px;
+  height: 300px;
+  width: 600px;
   border: 3px solid #0069D9;
   background-color: white;
   border-width: thick;
   color: #0069D9;
+  overflow: auto;
+}
+
+#message-form {
+  display: none;
+}
+
+#name-input {
+  width: 150px;
+  height: 45px;
+  border: 2px solid #0069D9;
+  background-color: white;
+  color: #0069D9;
+  font-size: 25px;
+  font-family: 'Bangers', cursive;
+  border: 2px solid #0069D9;
+}
+
+#name-submit {
+  width: 150px;
+  height: 45px;
+}
+
+#message-submit {
+  width: 150px;
+  height: 45px;
+}
+
+#message-input {
+  width: 150px;
+  height: 45px;
+  border: 2px solid #0069D9;
+  background-color: white;
+  color: #0069D9;
+  font-size: 25px;
+  font-family: 'Bangers', cursive;
+  border: 2px solid #0069D9;
 }
