--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,9 @@ h1 {
   color: white;
 }
 
-/***************** FACEBOOK LOGIN STYLE ****************/
-
 .row.facebook-login-row {
   text-align: center;
 }
-
-/***************** Chat Box STYLE **********************/
 
 .scores {
   text-align: center;
@@ -70,7 +66,6 @@ h1 {
 .loginBtn {
   box-sizing: border-box;
   position: relative;
-  /* width: 13em;  - apply for fixed size */
   margin: 0.2em;
   padding: 0 15px 0 46px;
   border: none;
@@ -100,12 +95,9 @@ h1 {
   box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
 }
 
-/* Facebook */
-
 .loginBtn--facebook {
   background-color: #4C69BA;
   background-image: linear-gradient(#4C69BA, #3B55A0);
-  /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
   text-shadow: 0 -1px 0 #354C8C;
 }
 
@@ -119,13 +111,34 @@ h1 {
   background-image: linear-gradient(#5B7BD5, #4864B1);
 }
 
+.startBtnRow {
+  text-align: center;
+}
+
+.scoreRow {
+  text-align: center;
+}
+
+.gameRow {
+  text-align: center;
+}
+
+#startBtn {
+  border: 2px solid white;
+  font-size: 50px;
+  height: auto;
+  width: 200px;
+  font-family: 'Bangers', cursive;
+  background-color: #0069D9;
+  color: white;
+  border-radius: 0.6em;
+  text-align: center;
+
+}
 #chat-box {
   padding: 7px;
   font-family: 'Delius', cursive;
-  /* font-size: 20px; */
-  /* margin-left: 225px; */
   height: 300px;
-  /* width: 600px; */
   border: 3px solid #0069D9;
   background-color: white;
   border-width: thick;
