--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,9 @@ body {
   font-family: 'Bangers', cursive;
   background-color: #000000;
   color: white;
-  background-image: url("../images/game.jpg");
-  background-size: cover!important;
+  background-image: url("../images/brain-jam-bkg.jpg");
+  background-size: 100% 100vh;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -20,6 +21,7 @@ h1 {
   text-align: center;
   font-size: 100px;
   font-weight: 600;
+  letter-spacing: 5px;
 }
 
 /******************************************************************/
@@ -49,14 +51,21 @@ h1 {
 
 #startBtn {
   border: 2px solid white;
-  font-size: 50px;
+  font-size: 35px;
   height: auto;
-  width: 200px;
+  width: 140px;
+  padding: 10px;
   font-family: 'Bangers', cursive;
   background-color: #0069D9;
   color: white;
   border-radius: 0.6em;
   text-align: center;
+  letter-spacing: 2px;
+}
+
+#startBtn:hover {
+  background-color: #EDC643;
+  color: #0069D9;
 }
 
 /******************************************************************/
