--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Bangers', cursive;
   background-color: #000000;
   color: white;
-  background-image: url("../images/brain-jam-bkg.jpg");
+  background-image: url("../images/brain-jam-bkg-2.jpg");
   background-size: 100% 100vh;
   background-repeat: no-repeat;
 }
