--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,13 @@ h1 {
   font-family: 'Bangers', cursive;
 }
 
+#playerAndScore {
+  border: 2px solid white;
+  background-color: #0069D9;
+  width: 300px;
+  border-radius: 20px;
+}
+
 /******************************************************************/
 
 /******************************************************************/
@@ -173,9 +180,9 @@ table {
 td {
   width: 100px;
   height: 100px;
-  background-color: white;
+  background-color: #0069D9;
   color: #0069D9;
-  border-color: black;
+  border-color: white;
   font-size: 30px;
   font-family: 'Bangers', cursive;
   border: 2px solid #0069D9;
