fixed the css for the game board buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h1 {
 /******* TITLE *******/
 
 .titleRow {
-  margin: 25px 0;
+  margin: 10px 0;
 }
 
 /******************************************************************/
@@ -154,6 +154,8 @@ h1 {
   background-color: #0069D9;
   width: 300px;
   border-radius: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /******************************************************************/
