--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,3 +205,9 @@ td {
   background-color: #0069D9;
   color: white;
 }
+
+p.correctOrWrongText {
+  text-align: center;
+  font-size: 120px;
+  letter-spacing: 9px;
+}
